# TranslucentMPlayer

./: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  ConfigurationDialog.cpp  ConfigurationDialog.h  ConfigurationDialog.ui  DesktopWidget.cpp  DesktopWidget.h  Main.cpp  PlayerManager.cpp  PlayerManager.h  ProgressWidgetAction.cpp  ProgressWidgetAction.h  TranslucentMPlayer.cpp  TranslucentMPlayer.h  VideoConfigurationDialog.cpp  VideoConfigurationDialog.h  VideoConfigurationDialog.ui  VolumeWidgetAction.cpp  VolumeWidgetAction.h  readme.md  resources.rc.in
installer/: script.iss.in
rsc/: resources.qrc
